--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,36 +20,25 @@ eureka.preferSameZone=false
 # Don't register locally running instances.
 eureka.registration.enabled=false
 
+### Load balancing backends without Eureka
+eureka.shouldFetchRegistry=false
+eureka.validateInstanceId=false
 
 # Loading Filters
 zuul.filters.root=src/main/groovy/com/netflix/zuul/sample/filters
 zuul.filters.locations=${zuul.filters.root}/inbound,${zuul.filters.root}/outbound,${zuul.filters.root}/endpoint
 zuul.filters.packages=com.netflix.zuul.filters.common
 
-
-### Load balancing backends with Eureka
-
-#eureka.shouldUseDns=true
-#eureka.eurekaServer.context=discovery/v2
-#eureka.eurekaServer.domainName=discovery${environment}.netflix.net
-#eureka.eurekaServer.gzipContent=true
-#
-#eureka.serviceUrl.default=http://${region}.${eureka.eurekaServer.domainName}:7001/${eureka.eurekaServer.context}
-#api.ribbon.NIWSServerListClassName=com.netflix.niws.loadbalancer.DiscoveryEnabledNIWSServerList
-#api.ribbon.DeploymentContextBasedVipAddresses=api-test.netflix.net:7001
-
-
-### Load balancing backends without Eureka
-eureka.shouldFetchRegistry=false
-eureka.validateInstanceId=false
-
-api.ribbon.listOfServers=localhost:8080
+api.ribbon.listOfServers=clientes-dev.cla.pe:443
 api.ribbon.client.NIWSServerListClassName=com.netflix.loadbalancer.ConfigurationBasedServerList
 api.ribbon.MaxConnectionsPerHost=-1
+api.ribbon.SecurePort=443
+api.ribbon.IsSecure=true
 
 zuul.origin.api.concurrency.protect.enabled=false
 zuul.server.netty.threads.acceptor=5
 zuul.server.netty.threads.worker=8
 
 com.claro.config.authorization.apim.enabled=true
-
+com.claro.config.authorization.apim.url=https://clientes-dev.cla.pe/generatoken
+com.claro.config.authorization.apim.urlprefixes=/clarohogar
