--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,16 +29,18 @@ zuul.filters.root=src/main/groovy/com/netflix/zuul/sample/filters
 zuul.filters.locations=${zuul.filters.root}/inbound,${zuul.filters.root}/outbound,${zuul.filters.root}/endpoint
 zuul.filters.packages=com.netflix.zuul.filters.common
 
-api.ribbon.listOfServers=clientes-dev.cla.pe:443
+api.ribbon.listOfServers=apis.negocio.dev.cla.pe:443
 api.ribbon.client.NIWSServerListClassName=com.netflix.loadbalancer.ConfigurationBasedServerList
 api.ribbon.MaxConnectionsPerHost=-1
 api.ribbon.SecurePort=443
 api.ribbon.IsSecure=true
+api.ribbon.ReadTimeout=15000
+api.ribbon.ConnectTimeout=15000
 
 zuul.origin.api.concurrency.protect.enabled=false
 zuul.server.netty.threads.acceptor=5
 zuul.server.netty.threads.worker=8
 
 com.claro.config.authorization.apim.enabled=true
-com.claro.config.authorization.apim.url=https://clientes-dev.cla.pe/generatoken
+com.claro.config.authorization.apim.url=https://apis.negocio.dev.cla.pe/generatoken
 com.claro.config.authorization.apim.urlprefixes=/clarohogar
