--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,7 @@ zuul.server.netty.threads.worker=8
 com.claro.config.authorization.apim.enabled=true
 com.claro.config.authorization.apim.url=https://apis.negocio.dev.cla.pe/generatoken
 com.claro.config.authorization.apim.urlprefixes=/clarohogar
+
+com.claro.config.proxyroutes.jdbc.url=jdbc:mysql://dbauroraclarodev.cx053an4mesk.us-east-1.rds.amazonaws.com:3306/dbclarohogardev
+com.claro.config.proxyroutes.jdbc.username=userclarohogar
+com.claro.config.proxyroutes.jdbc.password=us3rcl4r0h0g4r2018*
